Fix deprecated `URL` usages